syntax = "proto3";
package pb;
option go_package = "github.com/Sugar-pack/orders-manager/internal/pb";
import "google/protobuf/timestamp.proto";

service OrdersManagerService {
  rpc InsertOrder(Order) returns (OrderTnxResponse) {}
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {}
}

service TnxConfirmingService {
  rpc SendConfirmation(Confirmation) returns (ConfirmationResponse) {}
}

message Order {
  string user_id = 1;
  string label = 2;
  google.protobuf.Timestamp created_at = 3;
}

message OrderTnxResponse {
  string id  = 1;
  string tnx = 2;
}

message Confirmation {
  string tnx = 1;
  bool commit = 2;
}

message ConfirmationResponse {
}

message GetOrderRequest {
  string id  = 1;
}

message OrderResponse {
  string id  = 1;
  string user_id = 2;
  string label = 3;
  google.protobuf.Timestamp created_at = 4;
}





